# Rochias-P3

./: AGENTS.md  README.md  projet.md
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/kotlin/com/rochias/peroxyde/: AppPlaceholder.kt  MainActivity.kt
android-app/core-analysis/src/main/kotlin/com/rochias/peroxyde/core_analysis/: CoreAnalysisModule.kt
android-app/core-analysis/src/test/kotlin/com/rochias/peroxyde/core_analysis/: CoreAnalysisModuleTest.kt
android-app/core-camera/: build.gradle.kts
android-app/core-camera/src/main/: AndroidManifest.xml
android-app/core-camera/src/main/kotlin/com/rochias/peroxyde/core_camera/: CoreCameraModule.kt
android-app/core-camera/src/test/kotlin/com/rochias/peroxyde/core_camera/: CoreCameraModuleTest.kt
android-app/core-db/src/main/kotlin/com/rochias/peroxyde/core_db/: CoreDbModule.kt
android-app/core-sync/: build.gradle.kts
android-app/feature-aide/: build.gradle.kts
android-app/feature-test/: build.gradle.kts
android-app/gradle/wrapper/: README.md
data/calibration/: calibration-procedure.md  generate_reference_swatches.py  reference-swatches-acquisitions.csv  reference-swatches.csv
data/validation/: analysis_rules_contract_v1.json  analysis_rules_contract_v2.json  expected-results.csv
docs/: api-contract.md  architecture.md  vision-spec.md
server-rust/: Cargo.toml
server-rust/src/: api.rs  calibration.rs  domain.rs  main.rs  reporting.rs  rules.rs  storage.rs  validation.rs
(+7 files in other folders)
